tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_020_parse_errors/9101_missing_event_keyword/expected.txt
error[PARSE004]: unmatched '{' in event shape
  --> tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_020_parse_errors/9101_missing_event_keyword/input.kz:2:1
    |
  2 | ~event broken_syntax { x: i32  | done i32
    | ^

